MPP wizard test: add project import (KT-27492)